--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 EKH Vim
+
+Installing on other machine: 
+
+cd ~
+git clone http://github.com/username/dotvim.git ~/.vim
+ln -s ~/.vim/vimrc ~/.vimrc
+ln -s ~/.vim/gvimrc ~/.gvimrc
+cd ~/.vim
+git submodule init
+git submodule update
+
+Upgrading All Plugin Bundles
+git submodule foreach git pull origin master
